<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/players_game_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_12dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819"
        app:srcCompat="@drawable/dwarf_one" />

    <Button
        android:id="@+id/firstLevelButton"
        style="@style/ButtonCircleStyle"
        android:layout_width="54dp"
        android:layout_height="64dp"
        android:layout_marginBottom="@dimen/margin_12dp"
        android:backgroundTint="@color/button_yellow"
        android:text="@string/one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/secondLevelButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/secondLevelButton"
        style="@style/ButtonCircleStyle"
        android:layout_width="54dp"
        android:layout_height="64dp"
        android:layout_marginBottom="@dimen/margin_12dp"
        android:backgroundTint="@color/button_green"
        android:text="@string/two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/thirdLevelButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstLevelButton" />

    <Button
        android:id="@+id/thirdLevelButton"
        style="@style/ButtonCircleStyle"
        android:layout_width="54dp"
        android:layout_height="64dp"
        android:layout_marginBottom="@dimen/margin_12dp"
        android:backgroundTint="@color/button_red"
        android:text="@string/three"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/secondLevelButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
